opam-version: "2.0"
name: "portaudio"
version: "0.2.1"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-portaudio"
build: [ ]
install: [ ]
depends: [ ]
depexts: [ ]
bug-reports: "https://github.com/savonet/ocaml-portaudio/issues"
dev-repo: "git+https://github.com/savonet/ocaml-portaudio.git"
synopsis:
  "Bindings for the portaudio library which provides high-level functions for using soundcards"
